# amaranth-soc

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: main.yaml
amaranth_soc/: __init__.py  event.py  gpio.py  memory.py  periph.py  uart.py
amaranth_soc/csr/: __init__.py  action.py  bus.py  event.py  field.py  reg.py  wishbone.py
amaranth_soc/sram/: __init__.py  bus.py  wishbone.py
amaranth_soc/test/: test_csr_bus.py  test_csr_event.py  test_csr_wishbone.py  test_event.py  test_memory.py  test_sram_bus.py  test_sram_wishbone.py  test_wishbone_bus.py
amaranth_soc/wishbone/: __init__.py  bus.py  sram.py
docs/: conf.py  cover.rst  csr.rst  gpio.rst  index.rst  memory.rst  wishbone.rst
docs/_static/: custom.css
docs/csr/: action.rst  bus.rst  reg.rst
docs/wishbone/: bus.rst
nmigen_soc/: event.py  memory.py  periph.py
nmigen_soc/csr/: __init__.py  bus.py  event.py  periph.py  wishbone.py
nmigen_soc/test/: test_csr_bus.py  test_csr_event.py  test_csr_periph.py  test_csr_wishbone.py  test_event.py  test_memory.py  test_periph.py  test_wishbone_bus.py  utils.py
nmigen_soc/wishbone/: bus.py
tests/: test_csr_action.py  test_csr_bus.py  test_csr_event.py  test_csr_field.py  test_csr_reg.py  test_csr_wishbone.py  test_event.py  test_gpio.py  test_memory.py  test_periph.py  test_uart.py  test_wishbone_bus.py  test_wishbone_sram.py
