# Project metadata

[project]
dynamic = ["version"]

name = "amaranth-soc"
description = "System on Chip toolkit for Amaranth HDL"
authors = [{name = "Amaranth HDL contributors"}]
license = {file = "LICENSE.txt"}

requires-python = "~=3.8"
dependencies = [
  # this version requirement needs to be synchronized with the one in .github/workflows/main.yml
  "amaranth>=0.3,<0.5",
]

[project.urls]
"Source Code" = "https://github.com/amaranth-lang/amaranth-soc"
"Bug Tracker" = "https://github.com/amaranth-lang/amaranth-soc/issues"

# Build system configuration

[build-system]
requires = ["wheel", "setuptools>=67.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "node-and-timestamp"

# Development workflow configuration

[tool.pdm.dev-dependencies]
test = [
  "coverage",
]
docs = [
  "sphinx~=5.3",
  "sphinx-rtd-theme~=1.2",
  "sphinx-autobuild",
]

[tool.pdm.scripts]
test.composite = ["test-code"]
test-code.env = {PYTHONWARNINGS = "error"}
test-code.cmd = "python -m coverage run -m unittest discover -t . -s tests -v"
