# Project metadata

[tool.pdm.version]
source = "scm"

[project]
dynamic = ["version"]

name = "amaranth-soc"
description = "System on Chip toolkit for Amaranth HDL"
authors = [{name = "Amaranth HDL contributors"}]
license = {file = "LICENSE.txt"}

requires-python = "~=3.9"
dependencies = [
  # this version requirement needs to be synchronized with the one in .github/workflows/main.yml
  "amaranth>=0.5,<0.6",
]

[project.urls]
"Homepage" = "https://amaranth-lang.org/"
"Documentation" = "https://amaranth-lang.org/docs/amaranth-soc/" # modified in pdm_build.py
"Source Code" = "https://github.com/amaranth-lang/amaranth-soc"
"Bug Tracker" = "https://github.com/amaranth-lang/amaranth-soc/issues"

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pdm.dev-dependencies]
test = [
  "coverage",
]
docs = [
  "sphinx~=7.1",
  "sphinx-rtd-theme~=1.2",
  "sphinx-autobuild",
]

[tool.pdm.scripts]
test.composite = ["test-code"]
# TODO: Once the amaranth requirement is bumped to 0.6, remove the RFC 66 warning filter and fix the deprecations.
test-code.env = {PYTHONWARNINGS = "error,ignore:Per RFC 66,:DeprecationWarning"}
test-code.cmd = "python -m coverage run -m unittest discover -t . -s tests -v"
test-docs.cmd = "sphinx-build -b doctest docs docs/_build"

document.cmd = "sphinx-build docs docs/_build"
document-live.cmd = "sphinx-autobuild docs docs/_build --watch amaranth_soc"

coverage-text.cmd = "python -m coverage report"
coverage-html.cmd = "python -m coverage html"
